--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@prisma/client": "^5.17.0",
+    "argon2": "^0.40.3",
     "gsap": "^3.12.5",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
