--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
